# snippets_rust

./: .gitignore  .rls.toml  .rustfmt.toml  .travis.yml  Cargo.toml  LICENSE  README.md  deny.toml
.cargo/: config-ci.toml  config-faster.toml
.github/workflows/: .travis.yml  ci.yml
errno/: Cargo.toml
examples/: forkserver.c  main  r.c  shm_clt.c  shms.c  test.dict  w.c
misc/: Cargo.toml
misc/src/: basics.rs  cells.rs  clangs.rs  hashes.rs  iters.rs  llvms.rs  slotmaps.rs  terminates.rs
res/: simple.toml  structs.c
src/: clang_struct.rs  llvm_jit.rs  llvm_nop.rs  main.rs  scoping.rs
src/basics/: main.rs
src/lib/: mods.rs  scoping.rs
src/llvm/: llvm_jit.rs  llvm_nop.rs  main.rs
src/ncurses/: main.rs
src/network/: main.rs
src/sys/: main.rs
src/toml/: main.rs
tests/: execve.c  hello.c  mq.c  simple.rs  wait_sig.c
tree_sitters/: Cargo.toml
tree_sitters/src/: main.rs
