[package]
authors = ["Hongxu <hongxuchen1989@gmail.com>"]
name = "rs_snippets"
version = "0.1.0"

[dependencies]
burst-pool = "0.3.1"
bytecount = "0.1.7"
crossbeam = "0.2.10"
errno = "0.2.3"
fs2 = "0.4.2"
fs_extra = "1.0.0"
futures = "0.1.14"
hex = "0.2.0"
hyper = "0.11.0"
libc = "0.2"
log = "0.3"
log4rs = "0.7.0"
memmap = "0.5.2"
notify = "4.0.1"
num_cpus = "1.6.2"
rand = "0.3"
rayon = "0.8.2"
regex = "0.2.2"
serde = "1.0.8"
serde_derive = "1.0.8"
serde_json = "1.0.2"
shmem = "0.2.0"
spmc = "0.2.2"
tempdir = "0.3.5"
tempfile = "2.1.5"
term = "0.4.6"
threadpool = "1.3.2"
time = "0.1.37"
tokio-core = "0.1.8"
toml = "0.4"
url = "1.5.0"
redis = "0.5.3"


[dependencies.nix]
git = "https://github.com/nix-rust/nix"

[features]
avx-accel = ["bytecount/avx-accel"]
simd-accel = ["bytecount/simd-accel"]

[lib]
doc = false
doctest = false
name = "mylib"
path = "src/lib/mods.rs"
test = false

[profile]

[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
lto = false
opt-level = 3
panic = "unwind"
rpath = false

[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.doc]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = false
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false
