[package]
authors = ["weisuoxu <hongxuchen1989@gmail.com>"]
name = "rs_snippets"
version = "0.1.0"

[dependencies]
bitflags = "1.0.1"
burst-pool = "0.5.1"
bytecount = "0.3.1"
chan = "0.1.21"
chan-signal = "0.3.0"
chrono = "0.4.0"
crossbeam = "0.3.2"
envy = "0.3.1"
errno = "0.2.3"
error-chain = "0.11.0"
failure = "0.1.0"
esprit = "0.0.5"
fs2 = "0.4.2"
futures = "0.1.19"
fxhash = "0.2.1"
getset = "0.0.5"
hex = "0.3.1"
hwloc = "0.5.0"
hyper = "0.11.24"
lazy_static = "1.0.0"
libc = "0.2.39"
log = "0.4.1"
log4rs = "0.8.0"
maplit = "1.0.1"
memmap = "0.6.2"
memmem = "0.1.1"
notify = "4.0.1"
num_cpus = "1.6.2"
rand = "0.4.2"
rayon = "1.0.1"
redis = "0.8.0"
regex = "0.2.10"
serde = "1.0.34"
serde_derive = "1.0.27"
serde_json = "1.0.13"
shmem = "0.2.0"
simd = "0.2.1"
spmc = "0.2.2"
tempdir = "0.3.7"
tempfile = "2.1.5"
term = "0.5.1"
threadpool = "1.3.2"
time = "0.1.37"
tokio-core = "0.1.15"
toml = "0.4"
twox-hash = "1.1.0"
url = "1.7.0"
rsgenetic = "1.7.14"
petgraph = "0.4.11"

[dependencies.nix]
git = "https://github.com/nix-rust/nix"



[dependencies.nom]
features = [
    "regexp",
    "nightly",
]
version = "^3.2"

[features]
avx-accel = ["bytecount/avx-accel"]
simd-accel = ["bytecount/simd-accel"]

[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
lto = false
opt-level = 3
panic = "unwind"
rpath = false

[profile.dev]
codegen-units = 4
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.doc]
codegen-units = 1
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = false
opt-level = 3
panic = "unwind"
rpath = false

[profile.test]
codegen-units = 4
debug = true
debug-assertions = true
lto = false
opt-level = 0
panic = "unwind"
rpath = false
