[package]
authors = ["hongxu_chen@foxmail.com"]
name = "rs_snippets"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.95"
bitflags = "2.8.0"
burst-pool = "0.5.1"
bytecount = "0.6.8"
chan = "0.1.23"
chan-signal = "0.3.3"
chrono = "0.4.39"
clang = { version = "2.0.0", features = ["clang_10_0"] }
crossbeam = "0.8.4"
envy = "0.4.2"
errno = "0.3.10"
error-chain = "0.12.4"
esprit = "0.0.5"
failure = "0.1.8"
futures = "0.3.31"
fxhash = "0.2.1"
getset = "0.1.4"
hex = "0.4.3"
hyper = "1.6.0"
ignore = "0.4.23"
itertools = "0.14.0"
libc = "0.2.169"
llvm-sys = "191.0.0"
log = "0.4.25"
maplit = "1.0.2"
memmap = "0.7.0"
memmem = "0.1.1"
nix = "0.29.0"
nom = "8.0.0"
notify = "8.0.0"
num_cpus = "1.16.0"
once_cell = "1.20.2"
petgraph = "0.7.1"
rand = "0.9.0"
rayon = "1.10.0"
redis = "0.28.2"
regex = "1.0.0"
rsgenetic = "1.8.1"
serde = "1.0.217"
serde_derive = "1.0.217"
serde_json = "1.0.138"
slotmap = "1.0"
specs = "0.20.0"
spmc = "0.3.0"
sqlite = "0.36.1"
stdext = "0.3.3"
strum = "0.26.3"
tempdir = "0.3.7"
tempfile = "3.16.0"
term = "1.0.1"
termion = "4.0.3"
threadpool = "1.8.1"
time = "0.3.37"
tokei = "12.1.2"
tokio-core = "0.1.18"
toml = "0.8.19"
tree-sitter = "0.25.1"
tree-sitter-highlight = "0.25.1"
tree-sitter-json = "0.24.8"
tree-sitter-rust = "0.23.2"
twox-hash = "2.1.0"
# ureq = "3.0.4"
url = "2.5.4"

[profile.bench]
codegen-units = 1
debug = false
debug-assertions = false
lto = false
opt-level = 3
rpath = false

[profile.dev]
codegen-units = 4
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
lto = false
opt-level = 3
rpath = false

[profile.test]
codegen-units = 4
debug = true
debug-assertions = true
lto = false
opt-level = 0
rpath = false

[lints.rust]
unsafe_code = "allow"
unused = "allow"
unused_variables = "allow"
unsafe_op_in_unsafe_fn = "allow"
